# Collision-Generation-Vulkan

./: .gitignore  README.md
CollisionGeneration/: CMakeLists.txt
GraphicsProg2/: CMakeLists.txt
GraphicsProg2/Project/: CMakeLists.txt  MachineShader.cpp  MachineShader.h  main.cpp
GraphicsProg2/Project/Abstraction/: AABBCalculator.cpp  AABBCalculator.h  Camera.h  HelperStructs.h  Mesh.cpp  Mesh.h  Utils.h  VertexInfo.h
GraphicsProg2/Project/Abstraction/Collision/: CollisionFixer.cpp  CollisionFixer.h
GraphicsProg2/Project/Abstraction/Components/: BaseComponent.h
GraphicsProg2/Project/Abstraction/Components/DerivedComponents/: CameraComponent.cpp  CameraComponent.h  CollisionComponent.cpp  CollisionComponent.h  MovementComponent.cpp  MovementComponent.h
GraphicsProg2/Project/Abstraction/EventSystem/: Events.h
GraphicsProg2/Project/Abstraction/Meshes/: Mesh.cpp  Mesh.h
GraphicsProg2/Project/Abstraction/Meshes/DerivedMeshes/: PlayerMesh.cpp  PlayerMesh.h
GraphicsProg2/Project/Abstraction/Scene/: Scene.h  Scenemanager.h
GraphicsProg2/Project/Abstraction/Shaders/: Shader.h  ShaderManager.h
GraphicsProg2/Project/Abstraction/Shaders/DerivedShaders/: MachineShader.cpp  MachineShader.h  Shader2D.cpp  Shader2D.h  Shader3D.cpp  Shader3D.h
GraphicsProg2/Project/Abstraction/Time/: Time.cpp  Time.h
GraphicsProg2/Project/Abstraction/Weeks/: Week01.cpp  Week02.cpp  Week03.cpp
GraphicsProg2/Project/PhysicsGame/Collision/: AABBCalculator.cpp
GraphicsProg2/Project/PhysicsGame/Components/DerivedComponents/: CollisionComponent.cpp  CollisionComponent.h
GraphicsProg2/Project/PhysicsGame/Meshes/: Mesh.cpp  Mesh.h
GraphicsProg2/Project/Resources/: AABBInfo.txt  VertexInfo.txt
GraphicsProg2/Project/Resources/Shaders/: shader2D.frag  shader2D.vert  shader3D.frag  shader3D.vert
GraphicsProg2/Project/VulkanBase/Implementations/: BufferHelpers.cpp  RuntimeFunctions.cpp
GraphicsProg2/Project/VulkanBase/Implementations/Initialization/: CommandBufferInit.cpp  DescriptorInit.cpp  LogicalDeviceInit.cpp  PhysicalDeviceInit.cpp  PipelineInit.cpp  SwapChainInit.cpp  TextureInit.cpp  VertexBufferInit.cpp
GraphicsProg2/Project/VulkanUtil/: VulkanUtil.h
GraphicsProg2/Project/labwork/: Camera.h  Mesh.cpp  Mesh.h  Utils.h  Week01.cpp  Week02.cpp  Week03.cpp  Week04.cpp  Week05.cpp  Week06.cpp
GraphicsProg2/Project/labwork/Weeks/: Week02.cpp  Week03.cpp  Week05.cpp  Week06.cpp
GraphicsProg2/Project/shaders/: shader.frag  shader.vert
GraphicsProg2/Project/vulkanbase/: VulkanBase.h  VulkanLoad.cpp  VulkanUtil.cpp  VulkanUtil.h
GraphicsProg2_RayTracing/: CMakeLists.txt
GraphicsProg2_RayTracing/Project/: CMakeLists.txt
GraphicsProg2_RayTracing/Project/Abstraction/: Camera.h  VertexInfo.h
GraphicsProg2_RayTracing/Project/Abstraction/Shaders/: Shader.h
GraphicsProg2_RayTracing/Project/Abstraction/Shaders/DerivedShaders/: Shader3D.cpp  Shader3D.h  ShaderRT.cpp  ShaderRT.h
GraphicsProg2_RayTracing/Project/Resources/Shaders/: raytrace.rchit  raytrace.rchit.spv  raytrace.rgen.spv  raytrace.rmiss.spv
GraphicsProg2_RayTracing/Project/VulkanBase/: VulkanBase.h
GraphicsProg2_RayTracing/Project/VulkanBase/Implementations/Initialization/: PhysicalDeviceInit.cpp  VertexBufferInit.cpp
GraphicsProg2_RayTracing/Project/VulkanBase/Implementations/Initialization/BaseVulkan/: DescriptorInit.cpp  InstanceInit.cpp  LogicalDeviceInit.cpp  PhysicalDeviceInit.cpp  PipelineInit.cpp  SwapChainInit.cpp
GraphicsProg2_RayTracing/Project/VulkanBase/Implementations/Initialization/RayTracing/: RayTracingSetup.cpp
GraphicsProg2_RayTracing/Project/nvpro_core/: CMakeLists.txt
GraphicsProg2_RayTracing/Project/nvpro_core/_autogen/: hdr_dome.comp.h  hdr_integrate_brdf.comp.h  hdr_prefilter_diffuse.comp.h  hdr_prefilter_glossy.comp.h  passthrough.vert.h  sky.comp.h  tonemapper.comp.h  tonemapper.frag.h
GraphicsProg2_RayTracing/Project/nvpro_core/imgui/: imgui_helper.h
GraphicsProg2_RayTracing/Project/nvpro_core/nvp/: nvpfilesystem.cpp
GraphicsProg2_RayTracing/Project/nvpro_core/nvvk/: context_vk.cpp  debug_util_vk.hpp
GraphicsProg2_RayTracing/Project/nvpro_core/nvvkhl/: appbase_vkpp.cpp
GraphicsProg2_RayTracing/nvpro_core2/: CMakeLists.txt
GraphicsProg2_RayTracing/nvpro_core2/nvvk/: raytraceKHR_vk.hpp
RayTracingTutorial/bin_x64/Debug/: vk_ray_tracing__advance_KHR.exp  vk_ray_tracing__advance_KHR.lib  vk_raytrace.exp  vk_raytrace.lib
